# evil_robot

./: README.md
nonebot_bs_git/: README.md  pyproject.toml
nonebot_bs_git/src/plugins/change_preference/: __init__.py
nonebot_bs_git/src/plugins/deepseek_test/: __init__.py  user.py  weather_temperature.py
nonebot_bs_git/src/plugins/hello_everyday/: __init__.py  weather_temperature.py
nonebot_bs_git/src/plugins/help/: __init__.py
nonebot_bs_git/src/plugins/jm/: __init__.py  img2pdf.py  option.yml
nonebot_bs_git/src/plugins/quick_respond/: __init__.py  my_dict.json  save.py
nonebot_bs_git/src/plugins/setting_prompt/: __init__.py
nonebot_bs_git/src/plugins/test_event_response/: __init__.py
nonebot_bs_git/src/plugins/vioce/: __init__.py
