[project]
name = "nonebot_bs"
version = "0.1.0"
description = "nonebot_bs"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_session"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
